refactor openapi.yaml
